camera working. image taken is same size as camera. s3 storage time

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,11 @@
   to { transform: rotate(360deg); }
 }
 
+img#selfie {
+  width: 400px;
+  height: 400px
+}
+
 img {
   width:100%;
   max-width:600px;
