--- a/src/App.css
+++ b/src/App.css
@@ -51,11 +51,27 @@ img {
 }
 
 .center {
-    position: absolute;
-    margin: auto;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    text-align: center;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+}
+
+.first-column {
+  order: 1;
+}
+
+.second-column {
+  order: 2;
+}
+
+.third-column {
+  order: 3;
 }
