--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,13 @@
   height: 150px;
   padding: 20px;
   color: white;
+  margin-bottom: -5px;
 }
 
 .NavBar {
   background-color: #ADD8E6;
-  height: 75px;
-  padding: 20px;
+  height: 40px;
+  padding: 0px 20px 20px 20px;
   color: white;
 }
 
@@ -74,4 +75,8 @@ img {
 
 .third-column {
   order: 3;
+}
+
+.center-text {
+  text-align: center;
 }
