style for column cards and so forth

--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,7 @@ img {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  padding: 50px;
 }
 
 .first-column {
@@ -85,6 +86,10 @@ img {
 
 .center-text {
   text-align: center;
+}
+
+.go-to-user:hover {
+  color: blue ;
 }
 
 body {
